[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/FireDude/FireDude.png" type="Texture" id=1]
[ext_resource path="res://Space/PlanetGlow.png" type="Texture" id=2]
[ext_resource path="res://Enemies/FireDude/FireDude.gd" type="Script" id=3]
[ext_resource path="res://Colliders/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Managing/SoundManager.gd" type="Script" id=5]
[ext_resource path="res://Enemies/FireDude/Shoot.wav" type="AudioStream" id=6]
[ext_resource path="res://Enemies/FireDude/Death.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -8 ), Vector2( 0, -7 ), Vector2( 0, -8 ), Vector2( 0, -9 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light:texture_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.1, 0.09 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="FireDude" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )
shotSpeed = 170
kbStrength = 90

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.498039 )
position = Vector2( 0, 16 )
scale = Vector2( 1, -1 )
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="Light" type="Light2D" parent="."]
position = Vector2( 0, -9 )
texture = ExtResource( 2 )
texture_scale = 0.0957353
color = Color( 1, 0.313726, 0.0117647, 1 )
energy = 0.5

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, -8 )
collision_layer = 4
defense = 9
health = 30

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 3 )

[node name="Hurt" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 4 )

[node name="ShootSFX" type="Node2D" parent="."]
script = ExtResource( 5 )
audio = ExtResource( 6 )
directional = true
bus = "SFX"

[node name="DeathSFX" type="Node2D" parent="."]
script = ExtResource( 5 )
audio = ExtResource( 7 )
directional = true
bus = "SFX"

[connection signal="dead" from="Hurtbox" to="." method="_on_death"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurt"]
[connection signal="timeout" from="CooldownTimer" to="." method="shoot"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timedout"]

[editable path="Hurtbox"]
